--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -9,7 +9,7 @@ ENV RAILS_ENV production
 ENV RAILS_LOG_TO_STDOUT 1
 ENV RAILS_SERVER puma
 ENV GIT_URL https://github.com/bloodcloak/zammad.git
-ENV GIT_BRANCH discord-4-1
+ENV GIT_BRANCH discord-5
 ENV ES_SKIP_SET_KERNEL_PARAMETERS true
 ENV REDIS_URL redis://127.0.0.1:6379
 ENV MEMCACHE_SERVERS 127.0.0.1:11211
